--- a/css/app.css
+++ b/css/app.css
@@ -2305,6 +2305,9 @@ label {
   max-width: 100%;
   height: 3.88889em;
   background-color: #ededed; }
+  @media only screen and (max-width: 580px) {
+    .select-box {
+      width: 100%; } }
   .select-box:before {
     content: "";
     position: absolute;
